ontol-compiler/test-cases/error/rel/wildcard_span.on
rel integer // ERROR definition is sealed and cannot be modified
    'likes': integer
